# Neural-Network-In-A-Weekend

./: .gitignore  CMakeLists.txt
src/: ComputeEngine.cpp  ComputeEngine.hpp  Log.hpp  Task.cpp  Task.hpp  TaskBuilder.cpp  TaskBuilder.hpp
tests/: CMakeLists.txt
tests/mnist/: CMakeLists.txt  mnist.test.cpp
tests/mnist/dataset/: readme.txt
tests/shaders/: mnist.comp
